--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <a id="多维度分析验证提升用户留存率" class="anchor" href="#%E5%A4%9A%E7%BB%B4%E5%BA%A6%E5%88%86%E6%9E%90%E9%AA%8C%E8%AF%81%E6%8F%90%E5%8D%87%E7%94%A8%E6%88%B7%E7%95%99%E5%AD%98%E7%8E%87" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong><em>多维度分析验证提升用户留存率</em></strong>
 </h4>
 
-<p>为提升Android用户的留存率实现季度目标，定位具体问题，给出产品优化方向进行改进  </p>
+<p>为提升较低的Android版本留存率，定位出具体问题，给出产品优化方向并做相应改进  </p>
 
 <ul>
 <li>修正数据统计的bug，合理地定义留存率，使OKR制定更科学；<br>
@@ -74,12 +74,12 @@
 <a id="完善数据记录设计数据可视化后台" class="anchor" href="#%E5%AE%8C%E5%96%84%E6%95%B0%E6%8D%AE%E8%AE%B0%E5%BD%95%E8%AE%BE%E8%AE%A1%E6%95%B0%E6%8D%AE%E5%8F%AF%E8%A7%86%E5%8C%96%E5%90%8E%E5%8F%B0" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong><em>完善数据记录，设计数据可视化后台</em></strong>
 </h4>
 
-<p>在数据的记录和获取不完善的情况下，降低查看数据的成本和提高数据记录的准确性  </p>
+<p>在产品数据繁杂无章的情况下，降低查看数据的成本和提高数据记录的准确性  </p>
 
 <ul>
 <li>梳理产品框架，在App端增加重要而详细的用户行为数据记录，以便深入分析了解用户行为；<br>
 </li>
-<li>发布新功能/版本前，与其他产品人员和开发人员进行细致沟通，添加与功能改进相关的数据点，以便能从后续数据反馈中了解功能使用情况；<br>
+<li>发布新功能/版本前，与其他产品人员和开发人员进行细致沟通，添加与功能改进相关的数据点，以便能从后续数据表现中了解功能使用情况；<br>
 </li>
 <li>收集需求，根据不同的数据类型，设计数据后台的展示页面，以便相关人员能方便快捷地查看；<br>
 </li>
@@ -87,18 +87,18 @@
 </li>
 </ul>
 
-<p>弥补了数据记录的缺漏，提高了团队工作效率  </p>
+<p>弥补了数据记录的缺漏，让产品变化及时反馈到数据上来，提高了团队工作效率  </p>
 
 <h4>
 <a id="改进注册登录流程" class="anchor" href="#%E6%94%B9%E8%BF%9B%E6%B3%A8%E5%86%8C%E7%99%BB%E5%BD%95%E6%B5%81%E7%A8%8B" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong><em>改进注册登录流程</em></strong>
 </h4>
 
 <ul>
-<li>分析流程相关数据发现其转化率较低的步骤；<br>
+<li>分析该流程相关数据发现其转化率较低的步骤；<br>
 </li>
 <li>针对这些步骤设计线框图和交互界面，进行优化；<br>
 </li>
-<li>为后续的商店改进做基础建设<br>
+<li>使产品流程更符合易用性原则，同时也为后续的商店产品改进做基础建设<br>
 </li>
 </ul>
 
@@ -107,7 +107,7 @@
 </h4>
 
 <ul>
-<li>回复多国用户的数百封反馈邮件，了解用户使用场景，对比竞品类似功能</li>
+<li>每周回复多国用户的数百封反馈邮件，了解第一手用户使用情况，并对比竞品类似功能做改进思考</li>
 </ul>
 
 <hr>
