--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
 </li>
 <li>针对这些步骤设计线框图和交互界面，进行优化；<br>
 </li>
-使产品流程更符合易用性原则，同时也为后续的商店产品改进做基础建设<br>
-
 </ul>
+
+<p></p>使产品流程更符合易用性原则，同时也为后续的商店产品改进做基础建设</p>
 
 <h4>
 <a id="处理国外用户反馈，研究竞品信息" class="anchor" href="#%E5%A4%84%E7%90%86%E5%9B%BD%E5%A4%96%E7%94%A8%E6%88%B7%E5%8F%8D%E9%A6%88%E7%A0%94%E7%A9%B6%E7%AB%9E%E5%93%81%E4%BF%A1%E6%81%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong><em>处理国外用户反馈，研究竞品信息</em></strong>
