--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ hahahha
 <h3>
 <a id="实习经历" class="anchor" href="#%E5%AE%9E%E4%B9%A0%E7%BB%8F%E5%8E%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>实习经历</h3>
 
-<p><strong>20xx/07 - 20xx/11　　xxx　　xxx（<a href="www.guokr.com">www.guokr.com</a>）　　北京</strong></p>
+<p><strong>20xx/07 - 20xx/11　　xxx　　xxx（<a href="www.gxxx.com">www.guokr.com</a>）　　xxx</strong></p>
 
 <h4>
 <a id="用户维护" class="anchor" href="#%E7%94%A8%E6%88%B7%E7%BB%B4%E6%8A%A4" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong><em>用户维护</em></strong>
@@ -190,12 +190,7 @@ hahahha
 <h3>
 <a id="其他经历" class="anchor" href="#%E5%85%B6%E4%BB%96%E7%BB%8F%E5%8E%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>其他经历</h3>
 
-<p><strong>2013/07– 2013/08　　学术宅 (自发建立的一个方便学术研究生进行讨论的兴趣网站)　　项目成员</strong><br>  
-网站内测并提出产品改进建议；在BBS和相关网站对目标人群中进行宣传推广；邀请用户或自主创作优质内容充实网站<br>
-<strong>2010/05　　　　　　　2010年上海世博会优秀志愿者</strong><br>
-<strong>2009/09 - 2011/01　　复旦大学团委世博志愿者工作站项目部部长助理</strong><br>  
-<a href="http://zh.wikipedia.org/wiki/%E4%BD%A0_(%E6%97%B6%E4%BB%A3%E5%B9%B4%E5%BA%A6%E9%A3%8E%E4%BA%91%E4%BA%BA%E7%89%A9"><strong>2006年度时代风云人物</strong></a><br>
-豆瓣小组，BBS等社区活跃者，组织过多次线下聚会  </p>
+<p>xxxxxx </p>
 
 <hr>
 
