--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <h3>
+  
 
 
 <hr>
@@ -36,31 +36,31 @@
 <h3>
 <a id="教育背景" class="anchor" href="#%E6%95%99%E8%82%B2%E8%83%8C%E6%99%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a>Eduction</h3>
 
- <p><strong>BSc. in Physics, zzz University　　June 2013</strong></p>
-<p><strong>MSc. in Computer Science, yyy of kkk　　Oct. 2019</strong></p>
+ <p><strong>BSc. in Physics, zzz University　　　　June 2013</strong></p>
+<p><strong>MSc. in Computer Science, yyy of kkk　　　　Oct. 2019</strong></p>
 
 
 <hr>
 
 <h3>
-<a id="工作经历" class="anchor" href="#%E5%B7%A5%E4%BD%9C%E7%BB%8F%E5%8E%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>工作经历</h3>
+<a id="工作经历" class="anchor" href="#%E5%B7%A5%E4%BD%9C%E7%BB%8F%E5%8E%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>Working Experience</h3>
 
 <p><strong>20xx/01-　　lalalla</strong></p>
 hahahha
 <h4>
-<a id="多维度分析验证提升用户留存率" class="anchor" href="#%E5%A4%9A%E7%BB%B4%E5%BA%A6%E5%88%86%E6%9E%90%E9%AA%8C%E8%AF%81%E6%8F%90%E5%8D%87%E7%94%A8%E6%88%B7%E7%95%99%E5%AD%98%E7%8E%87" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong><em>多维度分析验证提升用户留存率</em></strong>
+<a id="多维度分析验证提升用户留存率" class="anchor" href="#%E5%A4%9A%E7%BB%B4%E5%BA%A6%E5%88%86%E6%9E%90%E9%AA%8C%E8%AF%81%E6%8F%90%E5%8D%87%E7%94%A8%E6%88%B7%E7%95%99%E5%AD%98%E7%8E%87" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong><em>Data Solution</em></strong>
 </h4>
 
 <p>为提升较低的Android版本留存率，定位出具体问题，给出产品优化方向并做相应改进  </p>
 
 <ul>
-<li>修正数据统计的bug，合理地定义留存率，使OKR制定更科学；<br>
+<li>Design Segment event tracking for website, mini-program
+<br>
 </li>
-<li>自主学习R语言处理了复杂的用户行为数据，多维度深入分析确定了几个语言等方面的问题点；<br>
+<li>ETL pipeline: Complete the production test and data validation, build data model in Snowflake data warehouse
+<br>
 </li>
-<li>倡导了两场可用性测试的开展，与十几位外国用户进行了焦点小组访谈和一对一交流，进一步验证数据中发现的问题点；<br>
-</li>
-<li>撰写可用性测试报告，指明改进方向，并将结论交付与开发人员；<br>
+<li>Create dashboard for multiple teams, help them track and achieve OKRs<br>
 </li>
 </ul>
 
