--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
   
 
 
-<hr>
 
 <h3>
 <a id="教育背景" class="anchor" href="#%E6%95%99%E8%82%B2%E8%83%8C%E6%99%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a>Eduction</h3>
@@ -49,9 +48,7 @@
 hahahha
 <h4>
 <a id="多维度分析验证提升用户留存率" class="anchor" href="#%E5%A4%9A%E7%BB%B4%E5%BA%A6%E5%88%86%E6%9E%90%E9%AA%8C%E8%AF%81%E6%8F%90%E5%8D%87%E7%94%A8%E6%88%B7%E7%95%99%E5%AD%98%E7%8E%87" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong><em>Data Solution</em></strong>
-</h4>
 
-<p>为提升较低的Android版本留存率，定位出具体问题，给出产品优化方向并做相应改进  </p>
 
 <ul>
 <li>Design Segment event tracking for website, mini-program
@@ -64,27 +61,33 @@ hahahha
 </li>
 </ul>
 
-<p>在近期发布的新版本里，用户留存率有了较大幅度的提升  </p>
+
 
 <h4>
-<a id="完善数据记录设计数据可视化后台" class="anchor" href="#%E5%AE%8C%E5%96%84%E6%95%B0%E6%8D%AE%E8%AE%B0%E5%BD%95%E8%AE%BE%E8%AE%A1%E6%95%B0%E6%8D%AE%E5%8F%AF%E8%A7%86%E5%8C%96%E5%90%8E%E5%8F%B0" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong><em>完善数据记录，设计数据可视化后台</em></strong>
+<a id="完善数据记录设计数据可视化后台" class="anchor" href="#%E5%AE%8C%E5%96%84%E6%95%B0%E6%8D%AE%E8%AE%B0%E5%BD%95%E8%AE%BE%E8%AE%A1%E6%95%B0%E6%8D%AE%E5%8F%AF%E8%A7%86%E5%8C%96%E5%90%8E%E5%8F%B0" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong><em>Data Science and Analytics</em></strong>
 </h4>
 
-<p>在产品数据繁杂无章的情况下，降低查看数据的成本和提高数据记录的准确性  </p>
+<p>A/B Testing  </p>
 
 <ul>
-<li>梳理产品框架，在App端增加全面的行为数据记录；<br>
+<li>Set up A/B testing framework by Google Optimize, save technical service budget  <br>
 </li>
-<li>发布新功能/版本前，与设计/开发人员充分沟通布数据点，以便从后续数据表现中了解功能使用情况；<br>
-</li>
-<li>收集需求，根据不同的数据类型，设计数据后台的展示页面，方便相关人员查看；<br>
-</li>
-<li>编写自动化程序，发送汇报工作进度的数据周报，促进团队内外的信息流通；<br>
+<li>Design experiment for website design, improve user experience and potential customer’s conversion<br>
 </li>
 </ul>
 
-<p>弥补了数据记录的缺漏，让产品变化及时反馈到数据上来，提高了团队工作效率  </p>
+  
+</h4>
 
+<p>Sales Efficiency and Intelligence</p>  
+  
+
+<ul>          
+</li>Collect data for sales mini-program to analyze user behaviour,  improve feature development</li>
+</li>Generate optimized sales leads, help sales team target precise customers, improve sales efficiency</li>         
+</ul>         
+          
+ 
 <h4>
 <a id="改进注册登录流程" class="anchor" href="#%E6%94%B9%E8%BF%9B%E6%B3%A8%E5%86%8C%E7%99%BB%E5%BD%95%E6%B5%81%E7%A8%8B" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong><em>改进注册登录流程</em></strong>
 </h4>
