--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 hahahha
 <h4>
 <a id="多维度分析验证提升用户留存率" class="anchor" href="#%E5%A4%9A%E7%BB%B4%E5%BA%A6%E5%88%86%E6%9E%90%E9%AA%8C%E8%AF%81%E6%8F%90%E5%8D%87%E7%94%A8%E6%88%B7%E7%95%99%E5%AD%98%E7%8E%87" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>Data Solution</strong>
-
+</h4>
 
 <ul>
 <li>Design Segment event tracking for website, mini-program
@@ -87,7 +87,18 @@ hahahha
 <li>Generate optimized sales leads, help sales team target precise customers, improve sales efficiency</li>         
 </ul>         
           
- 
+<h4>
+ <a id="改" class="anchor" href="#%E6%94%B9%E8%BF%9B%E6%B3%A8%E5%86%8C%E7%99%BB%E5%BD%95%E6%B5%81%E7%A8%8B" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>Knowledge Sharing</strong>       
+</h4>
+
+<ul>          
+<li>Provide Looker (data visualization tool) training for multiple teams, empower teams to do self-analysis with more flexibility
+<li>Share statistic learnings and analysis findings, equip team to be more data driven </li>
+
+ <p>Building localized business metric system and data model from 0 to 1 </p>
+  
+        
+-------------------- 
 <h4>
 <a id="改进注册登录流程" class="anchor" href="#%E6%94%B9%E8%BF%9B%E6%B3%A8%E5%86%8C%E7%99%BB%E5%BD%95%E6%B5%81%E7%A8%8B" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>Member and Post Recommendation</strong>
 </h4>
