--- a/index.html
+++ b/index.html
@@ -45,8 +45,11 @@
 <a id="工作经历" class="anchor" href="#%E5%B7%A5%E4%BD%9C%E7%BB%8F%E5%8E%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>Working Experience
  </h2>
 
+<h3>
 <p><strong>20xx/01-　　lalalla</strong></p>
-hahahha
+</h3>
+
+          
 <h4>
 <a id="多维度分析验证提升用户留存率" class="anchor" href="#%E5%A4%9A%E7%BB%B4%E5%BA%A6%E5%88%86%E6%9E%90%E9%AA%8C%E8%AF%81%E6%8F%90%E5%8D%87%E7%94%A8%E6%88%B7%E7%95%99%E5%AD%98%E7%8E%87" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>Data Solution</strong>
 </h4>
@@ -110,9 +113,9 @@ hahahha
 <h3> 20xx/01-　　lalalla</strong></p> </h3>
 Use Hive SQL and R with machine learning knowledge to process data, build models, implement visualization, draw conclusions, and suggest improvements. Conduct experiments such as A/B testing on millions of users. Evaluate strategy effectiveness with statistical models and tests. 
 
- <h4>
+
  <a id="1" class="anchor" href="#%E6%94%B9%E8%BF%9B%E6%B3%A8%E5%86%8C%E7%99%BB%E5%BD%95%E6%B5%81%E7%A8%8B" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>A/B testing experiment research</strong>       
-</h4>
+
 <ul>
 <li>Implemented R statistical simulations and optimized <strong>sequential testing</strong> termination </li>
 <li>Obtained more efficient and precise results with reducing at least 5% error rate  </li>      
@@ -161,6 +164,29 @@ Use Hive SQL and R with machine learning knowledge to process data, build models
 <li>Optimized website design by applying a series of funnel analysis and investigating hundreds of users offline, increasing conversion rates </li> 
 <li>Extracted and organized data using SQL and Spotfire (similar to Tableau) to create visualisation reports for tech team </li> 
 </ul> 
+
+
+
+<h2>
+<a id="工作经历" class="anchor" href="#%E5%B7%A5%E4%BD%9C%E7%BB%8F%E5%8E%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>Skill 
+</h2>
+
+<h4>
+Knowledge 
+</h4>
+<p>Machine Learning </p>
+<ul>Clustering, Logistic Regression, Decision Tree, Random Forest, SVM, etc. </ul>
+<p>Statistics, A/B Testing</p>
+
+<h4>Programming& System</h4>
+<ul>
+Hive SQL, Shell, Hadoop, Python, HTML, Linux </ul>
+<h4>Modelling & Analysis </h4>
+<ul>R, MATLAB, Google Analytics, Spotfire, Tableau </ul>
+<h4>Speaking Language </h4>
+<ul>Native speaker of Cantonese and Mandarin, proficiency in English </ul>
+
+
 
 
 -------------------- -------------------- -------------------- -------------------- -------------------- -------------------- -------------------- -------------------- -------------------- 
