--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <h2>
 <a id="教育背景" class="anchor" href="#%E6%95%99%E8%82%B2%E8%83%8C%E6%99%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a>Eduction</h2>
 
-
+<div agline="justify">
 <p>
   
 BSc. in Physics, zzz University &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; June 2013 
@@ -44,7 +44,8 @@ MSc. in Computer Science, yyy of kkk &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&
  <br>
 Research Assistant at xxxx  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Dec. 2018 - Feb. 2019 
  </p>
-      
+ </div> 
+          
 <hr>
 
 <h2>
