--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
 
 
 
-<p style="text-align:justify;
-text-justify:inter-ideograph;>
+<p style="text-align:justify;text-justify:inter-ideograph;>
   
 BSc. in Physics, zzz University &emsp;&emsp; June 2013
  <br>
